# plik

./: .args  .flake8  .hadolint.yaml  .pre-commit-config.yaml  Containerfile  README.md  plik.s6  pyproject.toml  uvicorn.s6
app/: main.py
app/infra/: storage.py
app/static/css/: app.css
app/static/js/: upload.js
app/templates/: base.html
app/templates/home/: index.html
app/templates/paste/: view.html
app/web/: templating.py
app/web/routes/: home.py  paste.py  paste_text.py  upload.py
